# Deploying-an-end-to-end-keyword-spotting-model-into-cloud-server-by-integrating-CI-CD-pipeline

./: Aptfile  Dockerfile  README.md  app.py  kws_spotter.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  main.yaml  release.yaml  tests.yaml
artifacts/2/asr_model_1.3/: meta.yaml
artifacts/2/asr_model_1.3/metrics/: accuracy  loss  val_accuracy  val_loss
artifacts/2/asr_model_1.3/model_artifacts/: model_summary.txt
artifacts/2/asr_model_1.3/model_artifacts/model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
artifacts/2/asr_model_1.3/model_artifacts/model/data/model/: keras_metadata.pb  saved_model.pb
artifacts/2/asr_model_1.3/model_artifacts/model/data/model/variables/: variables.index
artifacts/2/asr_model_1.3/params/: optimizer_name
artifacts/2/asr_model_1.3/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
config_dir/: config.yaml  configType.py
dataset/train/: labels.txt
images/: KWS_flowchart_updated.jpeg:Zone.Identifier
src/: data.py  exception_handler.py  experiment_tracking.py  inference.py  main.py  model.py  train.py
static/: page.css
templates/: page.html
tests/: test_kws_spotter.py
